<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <!--Inkpot Logo Image-->
    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />
   <!-- &lt;!&ndash;Register Fields-->
    <android.support.v4.view.ViewPager
        android:id="@+id/register_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        Register Content-->
        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logo_top_mar"
                android:background="@drawable/round_trans_bg"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/nor_pad">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!--Name-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_register_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:theme="@style/WhiteStyle">

                            <EditText
                                android:id="@+id/et_register_firstname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_user_name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textSize="@dimen/nor_text_size" />
                        </android.support.design.widget.TextInputLayout>

                        <!--MiddleName-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_register_middlename"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:theme="@style/WhiteStyle">

                            <EditText
                                android:id="@+id/et_register_middlename"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_user_mname"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textSize="@dimen/nor_text_size" />
                        </android.support.design.widget.TextInputLayout>

                        <!--LastName-->

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_register_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:theme="@style/WhiteStyle">

                            <EditText
                                android:id="@+id/et_register_lastname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_user_lname"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textSize="@dimen/nor_text_size" />
                        </android.support.design.widget.TextInputLayout>

                        <!--Email-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_register_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:theme="@style/WhiteStyle">

                            <EditText
                                android:id="@+id/et_register_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_user_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:textSize="@dimen/nor_text_size" />
                        </android.support.design.widget.TextInputLayout>
                        <!--Mobile-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_register_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:theme="@style/WhiteStyle">

                            <EditText
                                android:id="@+id/et_register_mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_user_mobile"
                                android:inputType="number"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:textSize="@dimen/nor_text_size" />
                        </android.support.design.widget.TextInputLayout>

                        <Spinner
                            android:id="@+id/sp_reguser_type"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/et_line"
                            android:overlapAnchor="false"
                            android:padding="@null" />


                        <!--Password-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/et_line"
                            app:theme="@style/WhiteStyle">

                            <EditText
                                android:id="@+id/et_register_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_user_pass"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textSize="@dimen/nor_text_size" />
                        </android.support.design.widget.TextInputLayout>
                        <!--Register Button-->

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/bt_register"
                            style="@style/bt_style"
                            android:text="Register"
                            android:background="@drawable/bg_login_btn"
                            android:textColor="@color/button_text_color" />
                        <TextView
                            android:id="@+id/tv_already_ac_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/tv_already_account"
                            android:gravity="center"
                            android:text="@string/tv_already_account"
                            android:textColor="@color/hint_color" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>



        </LinearLayout>

        <!--OTP Content-->

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logo_top_mar"
                android:background="@drawable/round_trans_bg"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/nor_pad">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/otp_text"
                    android:textColor="@color/et_line"
                    android:textSize="@dimen/tv_already_account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Enter The OTP Below in Case If We Fail To Detect SMS Automatically"
                    android:textColor="@color/et_line" />


                <EditText
                    android:id="@+id/et_register_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:ems="6"
                    android:gravity="center"
                    android:hint="@string/et_hint_enter_otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_otp"
                    style="@style/bt_style"
                    android:layout_marginTop="@dimen/logo_top_mar"
                    android:text="Submit"
                    android:textColor="@color/button_text_color"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.view.ViewPager>
</LinearLayout>